objects/Recurring_Business__c.object
<CustomObject>
    <fields>
        <fullName>ABB_Domain_PickVal__c</fullName>
        <globalPicklist>BusinessLineDomain</globalPicklist>
        <label>Business Line BU</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ABB_Domain__c</fullName>
        <label>Business Line BU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ABB_Industry_Usage_Level1__c</fullName>
        <label>Industry Usage Level1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ABB_Industry_Usage_Level2__c</fullName>
        <label>Industry Usage Level2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ABB_Industry_Usage_Level3__c</fullName>
        <label>Industry Usage Level3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ABB_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ABB Location - Bidding unit</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND NOT (3) AND 4 AND 5) OR 6 OR 7 OR 8 OR 9</booleanFilter>
            <filterItems>
                <field>ABB_Location__c.IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.BU__c</field>
                <operation>notContain</operation>
                <value>ZCCO, ZCRE, ZCVA</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.DIV__c</field>
                <operation>startsWith</operation>
                <value>ZC</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.Activity__c</field>
                <operation>notEqual</operation>
                <value>Admin/Corporate, Other, R&amp;D, Warehouse or Logistics, Training</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.Activity__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>ABB CCP Integration</value>
            </filterItems>
            <filterItems>
                <field>$User.Alias</field>
                <operation>equals</operation>
                <value>data.mig</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>ABB External Competitive Sales Agent Profile</value>
            </filterItems>
            <filterItems>
                <field>$User.DisabledLookupFilterMode__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please use the filters to reduce the number of fields in the lookup window.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ABB_Location__c</referenceTo>
        <relationshipLabel>Recurring Businesses</relationshipLabel>
        <relationshipName>Recurring_Businesses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Recurring Businesses</relationshipLabel>
        <relationshipName>Recurring_Businesses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_End_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account - End User</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Recurring Businesses (Account_End_User)</relationshipLabel>
        <relationshipName>Recurring_Businesses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>All_Target_vs_All_Commit__c</fullName>
        <label>All Target vs All Commit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_PickVal__c</fullName>
        <globalPicklist>ApplicationClass</globalPicklist>
        <label>Application</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award_Date__c</fullName>
        <description>Created as part of R8</description>
        <label>Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BU_PickVal__c</fullName>
        <globalPicklist>APTS_Application_BU</globalPicklist>
        <label>Application BU</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <label>Application BU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Line_PickVal__c</fullName>
        <globalPicklist>Business_Line</globalPicklist>
        <label>Business Line</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <label>Business Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Helps to link Recurring Business and its Recurring Opportunitites to Campaign</description>
        <inlineHelpText>Helps to link Recurring Business and its Recurring Opportunitites to Campaign</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Recurring Businesses</relationshipLabel>
        <relationshipName>Recurring_Businesses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CancelledByAgreementTermination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CancelledByAgreementTermination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChannelPartner_BusinessPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner Business Plan</label>
        <referenceTo>Joint_Business_Plan__c</referenceTo>
        <relationshipLabel>Recurring Businesses</relationshipLabel>
        <relationshipName>Recurring_Businesses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level1_PickVal__c</fullName>
        <globalPicklist>Channel_Class_Level1</globalPicklist>
        <label>Channel Class Level1</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level1__c</fullName>
        <label>Channel Class Level1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level2_Pickval__c</fullName>
        <globalPicklist>Channel_Class_Level2</globalPicklist>
        <label>Channel Class Level2</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level2__c</fullName>
        <label>Channel Class Level2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Created as part of R8</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_User_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User Project</label>
        <referenceTo>End_User_Project__c</referenceTo>
        <relationshipLabel>Recurring Businesses</relationshipLabel>
        <relationshipName>Recurring_Businesses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>Created as part of R8</description>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry_Usage_Level1_PickVal__c</fullName>
        <globalPicklist>Industry_Usage_Level_1</globalPicklist>
        <label>Industry Usage Level1</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry_Usage_Level2_PickVal__c</fullName>
        <globalPicklist>Industry_Usage_Level_2</globalPicklist>
        <label>Industry Usage Level2</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry_Usage_Level3_PickVal__c</fullName>
        <globalPicklist>Industry_Usage_Level_3</globalPicklist>
        <label>Industry Usage Level3</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsAutomaticCancellation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAutomaticCancellation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_For_Delete__c</fullName>
        <formula>Name = Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is for delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offering_Primary_PG__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offering Primary PG</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 4 AND 2) OR 3</booleanFilter>
            <errorMessage>Value does not exists, match filter criteria or is marked as Non-product PG</errorMessage>
            <filterItems>
                <field>Product_Group__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Product Group</value>
            </filterItems>
            <filterItems>
                <field>Product_Group__c.Non_Searchable__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>$User.Alias</field>
                <operation>equals</operation>
                <value>data.mig</value>
            </filterItems>
            <filterItems>
                <field>Product_Group__c.IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>Recurring Businesses</relationshipLabel>
        <relationshipName>Recurring_Businesses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name_Formula__c</fullName>
        <formula>IF(
				((Opportunity__c != null &amp;&amp; Source_Agreement__c != null) &amp;&amp; (Status__c == &quot;Cancelled&quot; || Status__c == &quot;Closed&quot;)),
     HYPERLINK(&quot;/&quot; +  Opportunity__c, Opportunity__r.Name) + &quot; &quot; + HYPERLINK(&quot;/apex/RBChangeSourceOpportunity?id=&quot; + Id, &quot;[change]&quot;),
	    HYPERLINK(&quot;/&quot; +  Opportunity__c, Opportunity__r.Name)
				)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Recurring Businesses</relationshipLabel>
        <relationshipName>Recurring_Businesses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>HYPERLINK( OwnerId ,  Owner:User.FirstName &amp; &apos; &apos; &amp;   Owner:User.LastName )</formula>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <description>Created as part of R8</description>
        <label>Parent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Periods__c</fullName>
        <description>Created as part of R8</description>
        <label>Number of Installments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_For_Cancellation__c</fullName>
        <label>Reason For Cancellation</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled by customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled by ABB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Political decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created in error/as duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring business modification</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RecurringBussOwnerLMD__c</fullName>
        <label>RecurringBussOwnerLMD</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RecurringBussOwnerPriorId__c</fullName>
        <label>RecurringBussOwnerPriorId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Period__c</fullName>
        <label>Schedule Period</label>
        <picklist>
            <picklistValues>
                <fullName>Specific Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relative Days</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scheduler_Day__c</fullName>
        <label>Scheduler Day</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduler_Month__c</fullName>
        <description>0-January, 1-February</description>
        <label>Scheduler Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduler_Repeat_On__c</fullName>
        <description>0-Sunday, 1-Monday</description>
        <label>Scheduler Repeat On</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Category__c</fullName>
        <inlineHelpText>Service Categories are stable data elements defining an offering scope with a product, system and service responsibility within a Service Product Group. If a Service Unit is used for booking purposes only without Service scope, select Non Service.</inlineHelpText>
        <label>Service Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceOppStageName__c</fullName>
        <label>SourceOppStageName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Recurring Businesses</relationshipLabel>
        <relationshipName>Recurring_Businesses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Created as part of R8</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TotalRBValue__c</fullName>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Created as part of R8</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Source Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>isAllFulfilled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAllFulfilled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Recurring_Businesses__c</fullName>
        <description>SFDC - 4167 - Field type ‘Power of One’ for reporting purpose only</description>
        <formula>1</formula>
        <inlineHelpText>It shows if at least 1 record on this object was created or not (1 means that it was)</inlineHelpText>
        <label># of Recurring Businesses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Recurring Business</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Recurring Business Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Businesses</pluralLabel>
    <recordTypes>
        <fullName>RB_Account</fullName>
        <active>true</active>
        <label>RB Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>RB_Master</fullName>
        <active>true</active>
        <label>RB Master</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>